src/test/deca/context/valid/methods/nested_method_calls_ok.deca
// Description :
// Appels imbriqués de méthodes
//
// Resultats :
// ok

class AA {
    int f() { return 1; }
    int g() { return f() + 2; }
    int h() { return g() + f(); }
}
