src/test/deca/context/invalid/avecObjet/return_missing_non_void_custom.deca
// Description :
// méthode non-void sans return
//
// Resultats :
// Erreur contextuelle
// Ligne 7 : return manquant

class O {
    int f() {
        int x = 1;
        x = x + 2;
        // pas de return -> doit échouer
    }
}
